Apply patch for HARMONY-6465 ([classlib][nio]Small fixes according to the findbug results)
svn path=/harmony/; revision=922278