@@ -50,13 +50,13 @@ class MappedByteBufferFactory {
     }
 
     static MappedByteBuffer getBuffer(PlatformAddress addr, int mapmode,
-            long size, int offset) throws Exception {
+                                      long size, int offset) throws Exception {
         /*
          * Spec points out explicitly that the size of map should be no greater
          * than Integer.MAX_VALUE, so long to int cast is safe here.
          */
         return (MappedByteBuffer) constructor.newInstance(new Object[] { addr,
-                new Integer((int) size), new Integer(offset),
-                new Integer(mapmode) });
+                                                                         Integer.valueOf((int)size), Integer.valueOf(offset),
+                                                                         Integer.valueOf(mapmode) });
     }
 }
